Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24167

Clang-CL compiler not detected for MSVC 2019

XMLWordPrintable

    • Windows
    • db2f2f92b6349fc0d8549ae01ab38613963c3f89 (qt-creator/qt-creator/master)

      QtCreator does not detect Clang-CL compiler in combination with MSVC 2019 toolchain.

      The detection code only successfully detects Clang-CL for MSVC 2017 or lower. MSVC 2019 is ignored: https://github.com/qt-creator/qt-creator/blob/v4.12.2/src/plugins/projectexplorer/msvctoolchain.cpp#L1555

        For Gerrit Dashboard: QTCREATORBUG-24167
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            landern Lander Noterman
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes