Clang-cl: Consider MSVC 2019

Fixes: QTCREATORBUG-24167
Change-Id: Iff6e98c5cb404c67dce796ad6f7225f97caa4184
Reviewed-by: David Schulz <david.schulz@qt.io>