src/plugins/projectexplorer/msvctoolchain.cpp
@@ -1517,8 +1517,11 @@ static const MsvcToolChain *selectMsvcToolChain(const QString &displayedVarsBat,
 
     QTC_CHECK(displayedVarsBat.isEmpty());
     const QVersionNumber version = clangClVersion(clangClPath);
-    if (version.majorVersion() >= 6)
-        toolChain = findMsvcToolChain(wordWidth, Abi::WindowsMsvc2017Flavor);
+    if (version.majorVersion() >= 6) {
+        toolChain = findMsvcToolChain(wordWidth, Abi::WindowsMsvc2019Flavor);
+        if (!toolChain)
+            toolChain = findMsvcToolChain(wordWidth, Abi::WindowsMsvc2017Flavor);
+    }
     if (!toolChain) {
         toolChain = findMsvcToolChain(wordWidth, Abi::WindowsMsvc2015Flavor);
         if (!toolChain)
